crates/jarl-core/src/lints/base/string_boundary/snapshots/jarl_core__lints__base__string_boundary__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/string_boundary/mod.rs
expression: "get_unsafe_fixed_text(vec![\"substr(x, 1, 2) == 'ab'\",\n\"substr(x, 1L, 2L) == 'ab'\", \"substr(x, 1L, end) == 'ab'\",\n\"substr(x, 1L, end) != 'ab'\", \"substr(x, 3, nchar(x)) != 'ab'\",\n\"'ab' == substr(x, 1L, end)\",\n\"substring(x, nchar(x) - 4L, nchar(x)) == 'abcde'\",\n\"substring(x, start, nchar(x)) == 'abcde'\",\n\"substring(colnames(x), start, nchar(colnames(x))) == 'abc'\",],\n\"string_boundary\")"
---
OLD:
====
substr(x, 1, 2) == 'ab'
NEW:
====
startsWith(x, 'ab')

OLD:
====
substr(x, 1L, 2L) == 'ab'
NEW:
====
startsWith(x, 'ab')

OLD:
====
substr(x, 1L, end) == 'ab'
NEW:
====
startsWith(x, 'ab')

OLD:
====
substr(x, 1L, end) != 'ab'
NEW:
====
!startsWith(x, 'ab')

OLD:
====
substr(x, 3, nchar(x)) != 'ab'
NEW:
====
!endsWith(x, 'ab')

OLD:
====
'ab' == substr(x, 1L, end)
NEW:
====
startsWith(x, 'ab')

OLD:
====
substring(x, nchar(x) - 4L, nchar(x)) == 'abcde'
NEW:
====
endsWith(x, 'abcde')

OLD:
====
substring(x, start, nchar(x)) == 'abcde'
NEW:
====
endsWith(x, 'abcde')

OLD:
====
substring(colnames(x), start, nchar(colnames(x))) == 'abc'
NEW:
====
endsWith(colnames(x), 'abc')
