crates/jarl-core/src/lints/base/string_boundary/snapshots/jarl_core__lints__base__string_boundary__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/base/string_boundary/mod.rs
expression: "get_unsafe_fixed_text(vec![\"# leading comment\\nsubstr(x, 1, 2) == 'ab'\",\n\"substr(x, \\n # a comment \\n1, 2) == 'ab'\",\n\"substr(x, 1, 2) == 'ab' # trailing comment\",\n\"substring(x, start, nchar(\\n # a comment\\n x\\n)) == 'ab'\",],\n\"string_boundary\")"
---
OLD:
====
# leading comment
substr(x, 1, 2) == 'ab'
NEW:
====
# leading comment
startsWith(x, 'ab')

OLD:
====
substr(x, 
 # a comment 
1, 2) == 'ab'
NEW:
====
substr(x, 
 # a comment 
1, 2) == 'ab'

OLD:
====
substr(x, 1, 2) == 'ab' # trailing comment
NEW:
====
startsWith(x, 'ab') # trailing comment

OLD:
====
substring(x, start, nchar(
 # a comment
 x
)) == 'ab'
NEW:
====
substring(x, start, nchar(
 # a comment
 x
)) == 'ab'
