crates/jarl-core/src/lints/base/string_boundary/snapshots/jarl_core__lints__base__string_boundary__tests__no_unsafe_fix_by_default.snap
---
source: crates/jarl-core/src/lints/base/string_boundary/mod.rs
expression: "get_fixed_text(vec![\"substr(x, 1, 2) == 'abc'\"], \"string_boundary\", None)"
---
OLD:
====
substr(x, 1, 2) == 'abc'
NEW:
====
substr(x, 1, 2) == 'abc'
